--- a/porte-manteau-pedia.cabal
+++ b/porte-manteau-pedia.cabal
@@ -16,4 +16,4 @@ executable porte-manteau-pedia
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring, word8, tagsoup, fast-tagsoup
+  build-depends:       base >= 4.7 && < 5, wreq, lens, bytestring, word8, hxt, HandsomeSoup, regex-compat, regex-tdfa, chatter, tokenize
